--- a/nginx/conf.d/00-hromp.com.conf
+++ b/nginx/conf.d/00-hromp.com.conf
@@ -120,6 +120,39 @@ server {
         try_files $uri $uri/ /distance-time-calc/index.html;
     }
 
+    # Doodlr Game Application
+    location /doodlr/ {
+        alias /home/henry/webserver/doodlr/app/website/;
+        index index.html;
+        try_files $uri $uri/ =404;
+    }
+
+    # Doodlr App (React Native Web)
+    location /doodlr/app/ {
+        alias /home/henry/webserver/doodlr/build/app-web/;
+        index index.html;
+        try_files $uri $uri/ /doodlr/app/index.html;
+    }
+
+    # Redirect /doodlr/app to trailing slash
+    location = /doodlr/app {
+        return 301 $scheme://$host/doodlr/app/;
+    }
+
+    # Doodlr API Backend
+    location /doodlr/api/ {
+        proxy_pass http://127.0.0.1:18000/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # WebSocket support for doodlr API
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+    }
+
     # Default location
     location / {
         try_files $uri $uri.html $uri/ =404;
