--- a/nginx/conf.d/00-hromp.com.conf
+++ b/nginx/conf.d/00-hromp.com.conf
@@ -134,6 +134,23 @@ server {
         try_files $uri $uri/ /doodlr/app/index.html;
     }
 
+    # Doodlr Expo static assets
+    location /_expo/ {
+        alias /home/henry/webserver/doodlr/build/app-web/_expo/;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        
+        # Proper MIME types for JavaScript files
+        location ~* \.js$ {
+            add_header Content-Type "application/javascript; charset=utf-8";
+        }
+        
+        # Proper MIME types for CSS files
+        location ~* \.css$ {
+            add_header Content-Type "text/css; charset=utf-8";
+        }
+    }
+
     # Redirect /doodlr/app to trailing slash
     location = /doodlr/app {
         return 301 $scheme://$host/doodlr/app/;
