Add archive-to-yt app at /archive-to-yt/app/
Proxy /archive-to-yt/app/ to archive-to-yt backend on port 18765.
Includes redirect from /archive-to-yt/app to /archive-to-yt/app/.

--- a/nginx/conf.d/00-hromp.com.conf
+++ b/nginx/conf.d/00-hromp.com.conf
@@ -1,5 +1,6 @@
 server {
     listen 80;
+    listen [::]:80;
     server_name hromp.com www.hromp.com plane.hromp.com;
     
     access_log /var/log/nginx/hromp.com.access.log combined;
@@ -51,7 +52,7 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://fonts.googleapis.com; font-src 'self' https://cdnjs.cloudflare.com https://fonts.gstatic.com; img-src 'self' data: https://cdn.star.nesdis.noaa.gov https://api.weather.gov; connect-src 'self' https://api.weather.gov;" always;
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://fonts.googleapis.com; font-src 'self' https://cdnjs.cloudflare.com https://fonts.gstatic.com; img-src 'self' data: https://cdn.star.nesdis.noaa.gov https://api.weather.gov; connect-src 'self' https://api.weather.gov https://hromp.com;" always;
 
     # Redirect /invoice to /invoice/
     location = /invoice {
@@ -134,7 +135,7 @@ server {
         try_files $uri $uri/ /doodlr/app/index.html;
     }
 
-    # Doodlr Expo static assets
+    # Doodlr Expo static assets (original)
     location /_expo/ {
         alias /home/henry/webserver/doodlr/build/app-web/_expo/;
         expires 1y;
@@ -156,7 +157,36 @@ server {
         return 301 $scheme://$host/doodlr/app/;
     }
 
-    # Doodlr API Backend
+    # Doodlr Pro App (New Frontend)
+    location /doodlr-pro/app/ {
+        alias /home/henry/webserver/doodlr-pro/build/app-web/;
+        index index.html;
+        try_files $uri $uri/ /doodlr-pro/app/index.html;
+    }
+
+    # Redirect /doodlr-pro/app to trailing slash
+    location = /doodlr-pro/app {
+        return 301 $scheme://$host/doodlr-pro/app/;
+    }
+
+    # Doodlr Pro Expo static assets
+    location /doodlr-pro/_expo/ {
+        alias /home/henry/webserver/doodlr-pro/build/app-web/_expo/;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        
+        # Proper MIME types for JavaScript files
+        location ~* \.js$ {
+            add_header Content-Type "application/javascript; charset=utf-8";
+        }
+        
+        # Proper MIME types for CSS files
+        location ~* \.css$ {
+            add_header Content-Type "text/css; charset=utf-8";
+        }
+    }
+
+    # Doodlr API Backend (Shared by both frontends)
     location /doodlr/api/ {
         proxy_pass http://127.0.0.1:18000/;
         proxy_set_header Host $host;
@@ -168,6 +198,72 @@ server {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
+    }
+
+    # Archive to YouTube (archive.org → YouTube uploader)
+    location = /archive-to-yt/app {
+        return 301 $scheme://$host/archive-to-yt/app/;
+    }
+    location /archive-to-yt/app/ {
+        proxy_pass http://127.0.0.1:18765/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_http_version 1.1;
+        proxy_read_timeout 300;
+        proxy_connect_timeout 300;
+        proxy_send_timeout 300;
+    }
+
+    # IPA Chart Website (submodule)
+    # Redirect /ipa to /ipa/
+    location = /ipa {
+        return 301 $scheme://$host/ipa/;
+    }
+
+    location /ipa/ {
+        alias /home/henry/webserver/domains/com/hromp.com/public_html/ipa-chart/;
+        index index.html;
+        try_files $uri $uri/ /ipa/index.html;
+    }
+
+    # IPA API proxy to Flask backend
+    location /ipa/api/ {
+        proxy_pass http://127.0.0.1:5000/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_read_timeout 30;
+        proxy_connect_timeout 30;
+        proxy_send_timeout 30;
+    }
+
+    # Azalea Art Gallery
+    # Redirect /azalea to /azalea/
+    location = /azalea {
+        return 301 $scheme://$host/azalea/;
+    }
+
+    # Serve Azalea static files
+    location /azalea/ {
+        alias /home/henry/webserver/domains/com/hromp.com/public_html/azalea/;
+        index index.html;
+        try_files $uri $uri/ /azalea/index.html;
+    }
+
+    # Azalea API proxy to Flask backend (port 5002)
+    location /azalea/api/ {
+        proxy_pass http://127.0.0.1:5002/api/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_read_timeout 30;
+        proxy_connect_timeout 30;
+        proxy_send_timeout 30;
     }
 
     # Default location
